# Formula-1-ML-Project

./: .gitignore  ARCHITECTURE.md  App.py  CLAUDE.md  LICENSE  PLAN.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: main.py
backend/core/: serialization.py  session_cache.py
backend/routers/: chat.py  clustering.py  predictions.py  races.py  reference.py  seasons.py
data/output/: circuits.csv  circuits_complete.csv  featured_circuits_complete.csv  featured_results.csv  races.csv  results.csv  results_2010.csv  results_2011.csv  results_2012.csv  results_2013.csv  results_2014.csv  results_2015.csv  results_2016.csv  results_2017.csv  results_2018.csv  results_2019.csv  results_2020.csv  results_2022.csv  results_2023.csv  results_2024.csv
data/preprocessed/: circuits_scaled.csv
data/seasons/: 2006.csv  2010.csv  2011.csv  2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv  2024.csv
docs/: AUS_2024_SUM.txt
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AsyncSection.jsx  EChart.jsx  Layout.jsx  PlotlyChart.jsx  RoundSelect.jsx
model/: encoder.pkl  gradient_boosting.pkl  logistic_regression.pkl  logistic_regression_balanced.pkl  scaler.pkl  tree.pkl  xgboost.pkl  xgboost_balanced.pkl
notebook/: 01-ETL.ipynb  01-model-circuit.ipynb  01-model-race.ipynb  2024-Season.ipynb  A1-EDA-Clustering.ipynb  A2-Model-Clustering.ipynb  B1-EDA-Classification.ipynb  B2-Model-Classification.ipynb  D1-Dashboard_Season.ipynb  D2-Dashboard_Race.ipynb  R17-AZE-24.ipynb  README.md
pages/: 1_Race_Report.py  2_Season_Report.py  3_Circuit_Clustering.py  4_Winner_Predictions.py
scripts/: build_pipeline.py
src/: circuit_clustering_model_support.py  classification.py  clustering.py  eda_support.py  extraction.py  preprocess.py  race_models_support.py  race_support.py  rag.py  season_support.py
src/circuit_clustering_model/: clustering.py  extract.py  feature_engineering.py
src/dashboard/: race.py  race_support.py  season.py
src/race_prediction_model/: classification.py  extract.py  feature_engineering.py
tests/: test_circuit_feature_engineering.py  test_classification_feature_engineering.py  test_classification_models.py  test_preprocess.py
tests/backend/: test_chat_router.py  test_clustering_router.py  test_predictions_router.py  test_races_seasons_integration.py  test_reference_router.py
(+10 files in other folders)
