[project]
name = "formula-1-ml-project"
version = "0.1.0"
description = "Formula 1 data analysis, ML models and AI chatbot"
requires-python = "==3.12.*"
dependencies = [
    "category_encoders==2.8.0",
    "chromadb==0.5.3",
    "fastapi==0.115.8",
    "fastf1==3.4.4",
    "joblib==1.4.2",
    "langchain==0.3.18",
    "langchain-community==0.3.17",
    "langchain-core==0.3.34",
    "langchain-openai==0.3.4",
    "matplotlib==3.10.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "python-dotenv==1.0.1",
    "ratelimit==2.2.1",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "seaborn==0.13.2",
    "shap==0.46.0",
    "tqdm==4.67.1",
    "uvicorn==0.34.0",
    "xgboost==2.1.4",
    "yellowbrick==1.5",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jupyterlab==4.3.4",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: needs live FastF1/Ergast network access (excluded by default, run with -m integration)",
]
addopts = "-m 'not integration'"

[tool.ruff]
# notebook/ is exploratory (star imports, execution-order-dependent names) by
# design - see ARCHITECTURE.md - and isn't meant to be linted like src/.
extend-exclude = ["notebook"]

[tool.ruff.lint]
# Pyflakes + the pycodestyle subset ruff itself defaults to: real bugs
# (unused imports, undefined names, bad lambda assignments) rather than
# full style/formatting enforcement, since this codebase predates ruff.
select = ["E4", "E7", "E9", "F"]
